aria-hidden remove from rating

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
         </p>
         <div class="rating" aria-label="Rating">
-          <span class="star" aria-hidden="true" role="img" tabindex="0" aria-label="1">1</span>
-          <span class="star" aria-hidden="true" role="img" tabindex="0" aria-label="2">2</span>
-          <span class="star" aria-hidden="true" role="img" tabindex="0" aria-label="3">3</span>
-          <span class="star" aria-hidden="true" role="img" tabindex="0" aria-label="4">4</span>
-          <span class="star" aria-hidden="true" role="img" tabindex="0" aria-label="5">5</span>
+          <span class="star"  role="img" tabindex="0" aria-label="1">1</span>
+          <span class="star"  role="img" tabindex="0" aria-label="2">2</span>
+          <span class="star"  role="img" tabindex="0" aria-label="3">3</span>
+          <span class="star"  role="img" tabindex="0" aria-label="4">4</span>
+          <span class="star"  role="img" tabindex="0" aria-label="5">5</span>
       </div>
       <button class="submit-btn">Submit</button>
 
